@@ -5,7 +5,6 @@ TODO
     tim? Tady, stejne jako 22 by bylo dobre mit Wikidata objekt, ktery by to pro
     Wikidata upresnoval.
 49. Testy pro Form udelat nejak, aby hodnoty davaly realny smysl na Wikidatech.
-52. Check Time->value for ISO 8601.
 53. Doc for test instances
 54. Finish test item for Human.
 60. In Wikibase::Datatype::Lexeme example in doc is blank Qualifiers. Remove it.
@@ -188,3 +187,7 @@ OK [20220625] skim
 
 59. Fixture for mediainfo statement
 OK [20220625] skim
+
+52. Check Time->value for ISO 8601.
+note: This is no ISO 8601
+OK [20230421] skim
